--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
             top: 0;
             left: 0;
             background-color: #000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
             display: block;
             background-color: #000;
         }
@@ -107,6 +110,8 @@
             background: rgba(255, 255, 255, 0.8);
             width: 0;
             z-index: 11;
+            cursor: pointer; /* प्रोग्रेस बार पर क्लिक करने योग्य बनाना */
+            pointer-events: auto; /* इंटरैक्शन सक्षम करना */
         }
 
         body {
@@ -114,7 +119,6 @@
             -webkit-user-drag: none;
         }
 
-        /* Double-tap Like Animation */
         .like-animation {
             position: absolute;
             width: 80px;
@@ -132,7 +136,6 @@
             100% { opacity: 0; transform: scale(1); }
         }
 
-        /* Top-right logo */
         .top-right-logo {
             position: fixed;
             top: 10px;
@@ -159,7 +162,6 @@
     
     <div class="title" id="title" onclick="showFullTitle()">Loading...</div>
     
-    <!-- Top-right logo -->
     <img class="top-right-logo" src="https://i.postimg.cc/X77btM3F/20250328-151255.png" alt="Logo">
 
     <script>
@@ -197,9 +199,8 @@
             try {
                 const response = await fetch(url, { 
                     method: 'HEAD', 
-                    mode: 'no-cors' // Use no-cors to avoid CORS issues during validation
+                    mode: 'no-cors'
                 });
-                // Since no-cors returns opaque responses, we assume success unless fetch fails
                 return true;
             } catch (error) {
                 console.log(`URL invalid or inaccessible: ${url}`, error);
@@ -264,10 +265,11 @@
             const { profiles, success } = await loadData();
             if (!success) return;
 
+            // URL से ReelId के आधार पर सही इंडेक्स सेट करें
             currentIndex = initialReelId ? 
                 allReels.findIndex(reel => reel.reelId === initialReelId) : 
                 0;
-            if (currentIndex === -1) currentIndex = 0;
+            if (currentIndex === -1) currentIndex = 0; // अगर ReelId नहीं मिला तो पहला रील
 
             function getProfileById(id) {
                 return profiles.find(profile => profile.id === id) || { 
@@ -291,7 +293,7 @@
                 video.preload = 'auto';
                 video.setAttribute('playsinline', '');
                 video.setAttribute('webkit-playsinline', '');
-                video.type = 'video/mp4'; // Explicitly set MIME type for MP4
+                video.type = 'video/mp4';
 
                 const progressBar = document.createElement('div');
                 progressBar.className = 'progress-bar';
@@ -319,13 +321,37 @@
 
                 video.addEventListener('error', (e) => {
                     console.error(`Error loading video ${reel.media}:`, e.message);
-                    nextReel(); // Skip to next reel on error
+                    nextReel();
                 });
 
                 video.addEventListener('touchstart', (e) => {
                     e.preventDefault();
                     if (!isAudioEnabled) {
                         setAudioPersistence();
+                    }
+                });
+
+                // प्रोग्रेस बार पर क्लिक/टच से स्किप करने की सुविधा
+                progressBar.addEventListener('click', (e) => {
+                    if (currentVideo) {
+                        const rect = progressBar.getBoundingClientRect();
+                        const clickX = e.clientX - rect.left;
+                        const progressWidth = rect.width;
+                        const clickPercentage = clickX / progressWidth;
+                        currentVideo.currentTime = clickPercentage * currentVideo.duration;
+                    }
+                });
+
+                // टच डिवाइस के लिए
+                progressBar.addEventListener('touchstart', (e) => {
+                    e.preventDefault();
+                    const touch = e.touches[0];
+                    const rect = progressBar.getBoundingClientRect();
+                    const touchX = touch.clientX - rect.left;
+                    const progressWidth = rect.width;
+                    const touchPercentage = touchX / progressWidth;
+                    if (currentVideo) {
+                        currentVideo.currentTime = touchPercentage * currentVideo.duration;
                     }
                 });
 
@@ -358,6 +384,11 @@
                 if (index < 0 || index >= allReels.length) {
                     console.warn('Index out of bounds:', index);
                     return;
+                }
+
+                if (currentVideo) {
+                    currentVideo.pause();
+                    currentVideo.muted = true;
                 }
 
                 container.innerHTML = '';
